--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,51 @@
+@font-face {
+  font-family: Poppins;
+  src: url(/public/fonts/Poppins-Thin.woff);
+  font-weight: 100;
+}
+@font-face {
+  font-family: Poppins;
+  src: url(/public/fonts/Poppins-ExtraLight.woff);
+  font-weight: 200;
+}
+@font-face {
+  font-family: Poppins;
+  src: url(/public/fonts/Poppins-Light.woff);
+  font-weight: 300;
+}
+@font-face {
+  font-family: Poppins;
+  src: url(/public/fonts/Poppins-Regular.woff);
+  font-weight: 400;
+}
+@font-face {
+  font-family: Poppins;
+  src: url(/fonts/Poppins-Medium.woff);
+  font-weight: 500;
+}
+@font-face {
+  font-family: Poppins;
+  src: url(/fonts/Poppins-SemiBold.woff);
+  font-weight: 600;
+}
+@font-face {
+  font-family: Poppins;
+  src: url(/fonts/Poppins-Bold.woff);
+  font-weight: 700;
+}
+@font-face {
+  font-family: Poppins;
+  src: url(/public/fonts/Poppins-ExtraBold.woff);
+  font-weight: 800;
+}
+@font-face {
+  font-family: Poppins;
+  src: url(/public/fonts/Poppins-Black.woff);
+  font-weight: 900;
+}
+
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Poppins, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1;
   font-weight: 500;
@@ -18,6 +64,7 @@
   --pink: #da2f68;
   --orange: #f89e00;
   --gradient: linear-gradient(98.37deg, #f89e00 0.99%, #da2f68 100%);
+  --gradient-text: linear-gradient(98.37deg, #f89e00 0.99%, #da2f68 100%);
 }
 
 * {
