--- a/src/index.scss
+++ b/src/index.scss
@@ -1,46 +1,46 @@
 @font-face {
   font-family: Poppins;
-  src: url(/public/fonts/Poppins-Thin.woff);
+  src: url(/Poppins-Thin.woff);
   font-weight: 100;
 }
 @font-face {
   font-family: Poppins;
-  src: url(/public/fonts/Poppins-ExtraLight.woff);
+  src: url(/Poppins-ExtraLight.woff);
   font-weight: 200;
 }
 @font-face {
   font-family: Poppins;
-  src: url(/public/fonts/Poppins-Light.woff);
+  src: url(/Poppins-Light.woff);
   font-weight: 300;
 }
 @font-face {
   font-family: Poppins;
-  src: url(/public/fonts/Poppins-Regular.woff);
+  src: url(/Poppins-Regular.woff);
   font-weight: 400;
 }
 @font-face {
   font-family: Poppins;
-  src: url(/fonts/Poppins-Medium.woff);
+  src: url(/Poppins-Medium.woff);
   font-weight: 500;
 }
 @font-face {
   font-family: Poppins;
-  src: url(/fonts/Poppins-SemiBold.woff);
+  src: url(/Poppins-SemiBold.woff);
   font-weight: 600;
 }
 @font-face {
   font-family: Poppins;
-  src: url(/fonts/Poppins-Bold.woff);
+  src: url(/Poppins-Bold.woff);
   font-weight: 700;
 }
 @font-face {
   font-family: Poppins;
-  src: url(/public/fonts/Poppins-ExtraBold.woff);
+  src: url(/Poppins-ExtraBold.woff);
   font-weight: 800;
 }
 @font-face {
   font-family: Poppins;
-  src: url(/public/fonts/Poppins-Black.woff);
+  src: url(/Poppins-Black.woff);
   font-weight: 900;
 }
 
