--- a/src/components/carousel/style.scss
+++ b/src/components/carousel/style.scss
@@ -151,6 +151,7 @@
         color: white;
         display: flex;
         flex-direction: column;
+        gap: 10px;
         .title {
           font-size: 16px;
           margin-bottom: 10px;
