--- a/src/pages/home/heroBanner/style.scss
+++ b/src/pages/home/heroBanner/style.scss
@@ -61,6 +61,7 @@
       font-size: 18px;
       font-weight: 500;
       margin-bottom: 40px;
+      color: white;
       @include md {
         font-size: 24px;
       }
